--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
     </div>
     <script src="js/questions.js"></script>
     <script src="js/script.js"></script>
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PCPEW7H3HQ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-PCPEW7H3HQ');
+    </script>
+    
 </body>
 
 </html>
