--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <script src="https://www.googleoptimize.com/optimize.js?id=OPT-5DWP3CD"></script>
     <meta charset="UTF-8">
     <title>Quiz App</title>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@600&family=Exo:ital,wght@1,600&display=swap" rel="stylesheet">
