--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 
 <head>
+    <!-- google optimize script -->
     <script src="https://www.googleoptimize.com/optimize.js?id=OPT-5DWP3CD"></script>
+    
     <meta charset="UTF-8">
     <title>Quiz App</title>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@600&family=Exo:ital,wght@1,600&display=swap" rel="stylesheet">
